[Component]Changing navbar labels

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,3 +3,11 @@
     margin-right: -15px !important;
     max-width: 110% !important;
 }
+
+
+.ui.menu .ui.dropdown .menu>.item{
+    color: white !important;
+    background: rgba(0,0,0,.87) !important;
+    stroke: white !important;
+    stroke-width: 0.25px !important;
+}
