--- a/src/containers/App/index.css
+++ b/src/containers/App/index.css
@@ -2,14 +2,34 @@
     text-align: center;
 }
 
-.App-logo {
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 160px;
-}
-
 .App-header {
     background-color: #222;
     padding: 20px;
 }
+
+.intrinsic-container {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+   
+  /* 16x9 Aspect Ratio */
+  .intrinsic-container-16x9 {
+    padding-bottom: 32%;
+  }
+   
+  /* 4x3 Aspect Ratio */
+  .intrinsic-container-4x3 {
+    padding-bottom: 75%;
+  }
+   
+  .intrinsic-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
